<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:background="#F5F5F5">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/welcome_title"
            android:textSize="24sp"
            android:textStyle="bold"
            android:paddingBottom="4dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:text="@string/welcome_subtitle"
            android:textColor="#777"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="20dp"
            android:textSize="14sp" />


        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cardHealthReports"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            app:cardCornerRadius="12dp"
            app:cardElevation="4dp">

            <LinearLayout
                android:padding="16dp"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:src="@drawable/ic_health_report"
                    app:tint="#0288D1"
                    android:layout_width="45dp"
                    android:layout_height="45dp" />

                <LinearLayout
                    android:orientation="vertical"
                    android:paddingStart="16dp"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content">

                    <TextView
                        android:text="@string/village_report_title"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:text="@string/village_report_desc"
                        android:textSize="14sp"
                        android:textColor="#666"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </LinearLayout>

                <ImageView
                    android:src="@drawable/ic_arrow_right"
                    android:layout_width="24dp"
                    android:layout_height="24dp" />
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>



        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cardWaterQuality"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            app:cardCornerRadius="12dp"
            app:cardElevation="4dp">

            <LinearLayout
                android:padding="16dp"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:src="@drawable/ic_water"
                    app:tint="#0288D1"
                    android:layout_width="45dp"
                    android:layout_height="45dp" />

                <LinearLayout
                    android:orientation="vertical"
                    android:paddingStart="16dp"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content">

                    <TextView
                        android:text="@string/water_quality_title"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:text="@string/water_quality_desc"
                        android:textSize="14sp"
                        android:textColor="#666"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </LinearLayout>

                <ImageView
                    android:src="@drawable/ic_arrow_right"
                    android:layout_width="24dp"
                    android:layout_height="24dp" />
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>



        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cardAlerts"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            app:cardCornerRadius="12dp"
            app:cardElevation="4dp">

            <LinearLayout
                android:padding="16dp"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:src="@drawable/ic_alert"
                    app:tint="#E65100"
                    android:layout_width="45dp"
                    android:layout_height="45dp" />

                <LinearLayout
                    android:orientation="vertical"
                    android:paddingStart="16dp"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content">

                    <TextView
                        android:text="@string/alerts_title"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:text="@string/alerts_desc"
                        android:textSize="14sp"
                        android:textColor="#666"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </LinearLayout>

                <ImageView
                    android:src="@drawable/ic_arrow_right"
                    android:layout_width="24dp"
                    android:layout_height="24dp" />
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>


        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cardEducation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="12dp"
            android:layout_marginBottom="16dp"
            app:cardElevation="4dp">

            <LinearLayout
                android:padding="16dp"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:src="@drawable/ic_education"
                    app:tint="#1565C0"
                    android:layout_width="45dp"
                    android:layout_height="45dp" />

                <LinearLayout
                    android:orientation="vertical"
                    android:paddingStart="16dp"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content">

                    <TextView
                        android:text="@string/education_title"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:text="@string/education_desc"
                        android:textSize="14sp"
                        android:textColor="#666"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </LinearLayout>

                <ImageView
                    android:src="@drawable/ic_arrow_right"
                    android:layout_width="24dp"
                    android:layout_height="24dp" />
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>


        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cardWaterReference"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="12dp"
            app:cardElevation="4dp">

            <LinearLayout
                android:padding="16dp"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:src="@drawable/ic_dataformat"
                    app:tint="#1565C0"
                    android:layout_width="45dp"
                    android:layout_height="45dp" />

                <LinearLayout
                    android:orientation="vertical"
                    android:paddingStart="16dp"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content">

                    <TextView
                        android:text="@string/water_reference_title"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:text="@string/water_reference_desc"
                        android:textSize="14sp"
                        android:textColor="#666"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </LinearLayout>

                <ImageView
                    android:src="@drawable/ic_arrow_right"
                    android:layout_width="24dp"
                    android:layout_height="24dp" />
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cardChatBotRefrence"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:cardCornerRadius="12dp"
            app:cardElevation="4dp">

            <LinearLayout
                android:padding="16dp"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:src="@drawable/ic_bot"
                    app:tint="#1565C0"
                    android:layout_width="45dp"
                    android:layout_height="45dp" />

                <LinearLayout
                    android:orientation="vertical"
                    android:paddingStart="16dp"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content">

                    <TextView
                        android:text="@string/chatbot_title"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:text="@string/chatbot_desc"
                        android:textSize="14sp"
                        android:textColor="#666"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </LinearLayout>

                <ImageView
                    android:src="@drawable/ic_arrow_right"
                    android:layout_width="24dp"
                    android:layout_height="24dp" />
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>



    </LinearLayout>
</ScrollView>
